Swagger doc, service logic and repo, updated
